fix ore detection

--- a/QuestTemplates/daily-template/mining/package.yml
+++ b/QuestTemplates/daily-template/mining/package.yml
@@ -3,7 +3,7 @@ package:
     - daily-template-base
 
 objectives:
-  collect: 'block $target_slug$ -$objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
+  collect: 'block .*$target_slug$ -$objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
   shrine: 'chestput $shrineLocation$ $target_drops_slug$:$objective_amount$ events:finishFolder notify'
 
 variables:
