fix target block bug with carrot and potato quests

--- a/QuestPackages/daily/farming/carrot/package.yml
+++ b/QuestPackages/daily/farming/carrot/package.yml
@@ -20,7 +20,7 @@ variables:
   target_drops: carrot
   target_drops_plural: carrots
   
-  target_slug: carrot
+  target_slug: carrots
   
   age: '[age=7]'
   
