--- a/QuestPackages/daily/farming/potato/package.yml
+++ b/QuestPackages/daily/farming/potato/package.yml
@@ -20,7 +20,7 @@ variables:
   target_drops: potato
   target_drops_plural: potatoes
   
-  target_slug: potato
+  target_slug: potatoes
   
   age: '[age=7]'
   
